2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "text/xml" to "application/xml", make
	the former an alias. Improve SVG, TIFF and JNG comments.
	Thanks to Eric van der Vlist.

2005-11-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "application/x-troff" to
	"text/troff", make the latter an alias, also add "text/x-troff" alias.
	Fixes #5072. Thanks to Tristan Miller.

2005-11-14  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Mup MIME type ("text/x-mup"). Fixes
	#2531. Thanks to Abel Cheung.

2005-11-01  Bastien Nocera  <hadess@hadess.net>

	* README: Fix the URLs to point to the right specs, pointed out
	by Tommi Vainikainen <thv@iki.fi> (Closes: #4041)

2005-11-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.svgz as a glob for SVG files, from
	Luca Ferretti <elle.uca@libero.it> (Closes: #4836)
	* config.h.in: removed, it is a generated file

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: split SQLite MIME type into two. Thanks to
	Jarosław Staniek. Fixes #3178.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-lyx" subclass of
	"text/plain" and add "text/x-lyx" as alias. Thanks to Filip Van
	Raemdonck and Abel Cheung. Fixes #1269.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-font-type1" subclass of
	"application/postscript". Thanks to Stephane Loeuillet. Fixes #1161.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: change dBASE comment, add aliases.
	Thanks to J.H.M Dassen. Fixes #3147.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add Lotus 1-2-3 aliases. Thanks to J.H.M
	Dassen. Fixes #3144.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add dia magic pattern. Thanks to J.H.M
	Dassen. Fixes #3142.
